# toddler-ai

./: .gitignore  .pre-commit-config.yaml  P2_ENCODER_ANALYSIS.md  README.md  env_3d.py  pyproject.toml  setup.py
.github/workflows/: build-docs-dev.yml  build-docs-version.yml  manual-build-docs-version.yml
scripts/: __init__.py  debug_dictlist.py  debug_il.py  debug_model.py  debug_pipeline.py  debug_ppo_backprop.py  debug_ppo_fix.py  enjoy.py  evaluate.py  make_demos.py  manual_control.py  test_ppo_bert_training.py  train_il.py  train_rl.py  visualize_agent.py  visualize_bert_embeddings.py
src/toddler_ai/: __init__.py
src/toddler_ai/agents/: __init__.py  bot.py
src/toddler_ai/algorithms/: __init__.py  base.py  grpo.py  imitation.py  ppo.py  ppo_br.py
src/toddler_ai/envs/: __init__.py
src/toddler_ai/envs/babyai/: __init__.py
src/toddler_ai/envs/babyai/core/: __init__.py
src/toddler_ai/envs/core/: __init__.py
src/toddler_ai/models/: __init__.py  ac_model.py  common.py  unified_vit_model.py  vit_model.py
src/toddler_ai/utils/: __init__.py  agent.py  arguments.py  evaluate.py  format.py  model.py  penv.py  supervised_losses.py
tests/: __init__.py  test_baby_ai_bot.py
