[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toddler-ai"
version = "0.1.0"
description = "Grounded language learning for embodied AI agents"
requires-python = ">= 3.10"

dependencies = [
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "minigrid>=2.3.0",
    "pygame>=2.4.0",
    "torch>=2.0.0",
    "blosc>=1.11.0",
]

[project.optional-dependencies]
tracking = [
    "wandb>=0.16.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toddler_ai"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.1",
    "pre-commit>=3.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]
